deploy: 90b8ad82739ec06e2e9eb8fe6ba12033c6504310

--- a/docs/man/man/md_README.3
+++ b/docs/man/man/md_README.3
@@ -1,4 +1,4 @@
-.TH "md_README" 3 "Tue May 31 2022" "Version 1.0" "AmurCore" \" -*- nroff -*-
+.TH "md_README" 3 "Fri Sep 16 2022" "Version 1.0" "AmurCore" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -7,9 +7,9 @@ This is application for communicate with robot on RPi base with \fCAmurCore\fP\&
 .SH "Requirements:"
 .PP
 1) Qt 5\&.12\&.2 + qmake 2) OpenCV 4\&.0\&.1 3) Protobuf 3\&.7\&.0 4) SDL 2\&.0 5) PocketSphinx+SphinxBase 5prealpha-2 6) qt5-speech 5\&.12\&.2-1
-.SH "Sensors of Zanya:"
+.SH "Sensors of robot:"
 .PP
-1) Camera - OV5647 2) Accelerometer & Gyroscope - MPU-6050 3) Barometer - BMP-280 4) EncoderMotorL, EncoderMotorR 5) Gas sensor - MQ-7 6) Battery voltage
-.SH "Controls of Zanya:"
+1) Camera - OV5647 2) Accelerometer & Gyroscope & Magnitometer - MPU-9250 3) Barometer - BMP-280 4) Encoders: left wheel, right wheel & hands 5) Gas sensor - MQ-7 6) Battery voltage
+.SH "Controls of Robot:"
 .PP
-1) ServoX, ServoY - MG90S 2) MotorLeft, MotorRight 
+1) Camera servoX, servoY - MG90S 2) Motors: left wheel, right wheel & hand 
