--- a/docs/man/man/md_README.3
+++ b/docs/man/man/md_README.3
@@ -1,9 +1,9 @@
-.TH "md_README" 3 "Sun Nov 20 2022" "Version 1.0" "AmurCore" \" -*- nroff -*-
+.TH "md_README" 3 "Sun Mar 19 2023" "Version 1.0" "AmurCore" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
 md_README \- Amur Core 
-This is application for communicate with robot on RPi base with \fCAmurCore\fP\&.
+This is application for communicate with robot on RPi base with [AmurClient]\&.
 .SH "Requirements:"
 .PP
 1) Qt 5\&.12\&.2 + qmake 2) OpenCV 4\&.0\&.1 3) Protobuf 3\&.7\&.0 4) SDL 2\&.0 5) PocketSphinx+SphinxBase 5prealpha-2 6) qt5-speech 5\&.12\&.2-1
